Mon Mar  1 20:00:57 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam-proxy.c:
	* beast-gtk/bstparam.h:
	* beast-gtk/bstsnetrouter.c: 
	* beast-gtk/bsttracksynthdialog.[hc]: 
	* bsttrackview.c:
	* bsttreestores.c: 
	* beast-gtk/bstapp.c: adapt to BseItemSeq changes. 

	* bsw/Makefile.am: stop building mkapi which is broken and unused.

	* tests/Makefile.am: added SFIDL dependancy for sfidl generated sources.

Tue Mar  2 01:07:55 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkdialog.c:
	(gxk_dialog_key_press_event): when building against gtk+-2.3.5, use
	gtk_window_activate_key() and gtk_window_propagate_key_event() to
	implement proper accelerator vs. focus widget handling.

Fri Feb 27 08:38:09 2004  Tim Janik  <timj@gtk.org>

	* library/keys/: new directory.

	* library/keys/keyrc.de: added german keyrc.

	* beast-gtk/bstkeybindings.[hc]: implemented loading of stock
	keyrc files.

	* beast-gtk/bstmain.c: handle keys path.

	* beast-gtk/bstfiledialog.[hc]: provide API to allow for arbitrary
	file dialogs.

	* configure.in: provide beastkeysdir, added library/keys/.

Fri Feb 27 07:08:55 2004  Tim Janik  <timj@gtk.org>

	* launchers/Makefile.am: build beast and bsesh suid wrappers.

	* launchers/beaststart.c: build versioned beast executable name.
	* launchers/bseshstart.c: build versioned bsesh executable name.

	* launchers/suidmain.c: figure executable name via
	custom_find_executable() function, after dropping privileges.
	* launchers/suidmain.h: prototype custom_find_executable().

	* bse/bseconfig.h.in:
	* configure.in: fix BSE_VERSION vs. BST_VERSION.

	* beast-gtk/suidmain.c: removed
	* beast-gtk/Makefile.am: don't build beast suidwrapper here.

	* shell/Makefile.am: don't build bsesh suidwrapper here.

Fri Feb 27 06:48:41 2004  Tim Janik  <timj@gtk.org>

	* launchers/suidmain.c: CVS copied here from beast-gtk/.

Fri Feb 27 06:42:01 2004  Tim Janik  <timj@gtk.org>

	* launchers/: added new directory to hold beast and bsesh