@@ -1,3 +1,8 @@
+Tue Mar  2 10:20:54 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkscrollcanvas.c:
+	s/reallocate_children/reallocate_contents/g, changed callers.
+
 Mon Mar  1 20:00:57 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstparam-proxy.c:
